틀작업 진행중

--- a/_top_bar.html
+++ b/_top_bar.html
@@ -1,5 +1,69 @@
 <div class="top-bar flex items-center justify-between">
-    <div class="container relative flex items-center justify-between">
-        topbar
+    <div class="container relative flex items-center justify-between text-basic">
+        <div class="left">
+            <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic casino_i"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Casino"></use></svg> 카지노</button>
+            <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic sports_i"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Sports"></use></svg> 스포츠</button>
+            <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic horse_i"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Horse"></use></svg> 레이싱</button>
+        </div>
+        <div class="right flex items-center">
+            <button class="btn h-11 px-4 border-none shadow-none">로그인</button>
+            <button class="btn btn-green h-11 w-28 mr-4 font-bold">가입하기</button>
+            <button class="btn btn-top h-11 px-4"><svg class="w-5 h-5 fill-basic"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Notice"></use></svg></button>
+            <button class="btn btn-top h-11 px-4 chat_btn"><svg class="w-5 h-5 fill-basic"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Chat"></use></svg><div class="chat-dot"></div></button>
+            <div class="profile_btn">
+                <button class="mx-4"><i class="block w-9 h-9 rounded-full overflow-hidden"><img src="./dist/custom_img/profile_img.png" alt=""></i></button>
+                <div class="profile_box">
+                    <div class="shadow-lg">
+                        <ul class="p-3 rounded-t">
+                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                                <svg class="w-5 h-5 mr-2"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Wallet"></use></svg>
+                                <span>지갑</span>
+                            </a></li>
+                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                                <svg class="w-5 h-5 mr-2"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_WithDraw"></use></svg>
+                                <span>출금</span>
+                            </a></li>
+                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                                <svg class="w-5 h-5 mr-2"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Transaction"></use></svg>
+                                <span>거래</span>
+                            </a></li>
+                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                                <svg class="w-5 h-5 mr-2"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Analyze"></use></svg>
+                                <span>롤오버 개요</span>
+                            </a></li>
+                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                                <svg class="w-5 h-5 mr-2"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_VipClub"></use></svg>
+                                <span>VIP 클럽</span>
+                            </a></li>
+                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                                <svg class="w-5 h-5 mr-2"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Affiliate"></use></svg>
+                                <span>제휴</span>
+                            </a></li>
+                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                                <svg class="w-5 h-5 mr-2"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_AddFirend"></use></svg>
+                                <span>추천 그리고 보상</span>
+                            </a></li>
+                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                                <svg class="w-5 h-5 mr-2"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_UserProfile"></use></svg>
+                                <span>나의 프로필</span>
+                            </a></li>
+                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                                <svg class="w-5 h-5 mr-2"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Setting"></use></svg>
+                                <span>글로벌 세팅</span>
+                            </a></li>
+                        </ul>
+                        <ul class="p-3 rounded-b border-t border-slate-200">
+                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                                <svg class="w-5 h-5 mr-2"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Logout"></use></svg>
+                                <span>로그아웃</span>
+                            </a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <button class="btn btn-top h-11 px-4"><svg class="w-5 h-5 fill-basic"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Language"></use></svg></button>
+            <button class="btn btn-top h-11 px-2">₩ KRW</button>
+        </div>
     </div>
 </div>
