--- a/index.html
+++ b/index.html
@@ -18,31 +18,7 @@
     <!-- ** css 끝 ** -->
 </head>
 
-<body>
-    <!-- ** 페이지 로딩 ** -->
-    <div id="loadingContainer">
-        <svg width="25" viewBox="0 0 120 30" xmlns="http://www.w3.org/2000/svg" fill="rgb(30, 41, 59)" class="w-8 h-8">
-            <circle cx="15" cy="15" r="15">
-                <animate attributeName="r" from="15" to="15" begin="0s" dur="0.8s" values="15;9;15" calcMode="linear"
-                    repeatCount="indefinite"></animate>
-                <animate attributeName="fill-opacity" from="1" to="1" begin="0s" dur="0.8s" values="1;.5;1"
-                    calcMode="linear" repeatCount="indefinite"></animate>
-            </circle>
-            <circle cx="60" cy="15" r="9" fill-opacity="0.3">
-                <animate attributeName="r" from="9" to="9" begin="0s" dur="0.8s" values="9;15;9" calcMode="linear"
-                    repeatCount="indefinite"></animate>
-                <animate attributeName="fill-opacity" from="0.5" to="0.5" begin="0s" dur="0.8s" values=".5;1;.5"
-                    calcMode="linear" repeatCount="indefinite"></animate>
-            </circle>
-            <circle cx="105" cy="15" r="15">
-                <animate attributeName="r" from="15" to="15" begin="0s" dur="0.8s" values="15;9;15" calcMode="linear"
-                    repeatCount="indefinite"></animate>
-                <animate attributeName="fill-opacity" from="1" to="1" begin="0s" dur="0.8s" values="1;.5;1"
-                    calcMode="linear" repeatCount="indefinite"></animate>
-            </circle>
-        </svg>
-    </div>
-    <!-- ** 페이지 로딩 끝 ** -->
+<body class="bg-back">
 
     <div class="flex relative">
         <!--  ** 사이드 메뉴 시작 ** -->
@@ -51,23 +27,41 @@
 
         <!--  ** 메인 보드 시작 ** -->
         <div class="content">
-            <svg class="s1ff97qc icon"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Chat"></use></svg>
+            <!-- ** 페이지 로딩 ** -->
+            <div id="loadingContainer">
+                <svg width="25" viewBox="0 0 120 30" xmlns="http://www.w3.org/2000/svg" fill="#3BC117" class="w-12 h-12">
+                    <circle cx="15" cy="15" r="15">
+                        <animate attributeName="r" from="15" to="15" begin="0s" dur="0.8s" values="15;9;15" calcMode="linear" repeatCount="indefinite"></animate>
+                        <animate attributeName="fill-opacity" from="1" to="1" begin="0s" dur="0.8s" values="1;.5;1" calcMode="linear" repeatCount="indefinite"></animate>
+                    </circle>
+                    <circle cx="60" cy="15" r="9" fill-opacity="0.3">
+                        <animate attributeName="r" from="9" to="9" begin="0s" dur="0.8s" values="9;15;9" calcMode="linear" repeatCount="indefinite"></animate>
+                        <animate attributeName="fill-opacity" from="0.5" to="0.5" begin="0s" dur="0.8s" values=".5;1;.5" calcMode="linear" repeatCount="indefinite"></animate>
+                    </circle>
+                    <circle cx="105" cy="15" r="15">
+                        <animate attributeName="r" from="15" to="15" begin="0s" dur="0.8s" values="15;9;15" calcMode="linear" repeatCount="indefinite"></animate>
+                        <animate attributeName="fill-opacity" from="1" to="1" begin="0s" dur="0.8s" values="1;.5;1" calcMode="linear" repeatCount="indefinite"></animate>
+                    </circle>
+                </svg>
+            </div>
+            <!-- ** 페이지 로딩 끝 ** -->
+            
             <!-- ** 탑바 시작 ** -->
             <!-- ** 탑바 끝 ** -->
 
             <!-- ** 내용시작 ** -->
-            <div class="container_wrap">
-               
+            <div class="container_wrap" style="height:1000px;">
+                <svg class="s1ff97qc icon"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Chat"></use></svg>
+                <!-- ** 푸터 시작 ** -->
+                <!-- ** 푸터 끝 ** -->
             </div>
             <!-- ** 내용 끝 ** -->
 
-            <!-- ** 푸터 시작 ** -->
-            <!-- ** 푸터 끝 ** -->
         </div>
         <!--  ** 메인 보드 끝 ** -->
 
         <!--  ** 오른쪽 보드 시작 ** -->
-        <div class="right-sidebar text-white"></div>
+        <div class="right-sidebar "></div>
         <!--  ** 오른쪽 보드 끝 ** -->
 
         <!--  ** 모달영역 시작 ** -->
