틀 작업 진행중

--- a/_footer.html
+++ b/_footer.html
@@ -1,5 +1,98 @@
 <footer>
     <div class="container py-9">
-        푸터
+        <ul class="sitemap flex flex-wrap flex-col lg:flex-row gap-5 lg:gap-10 justify-between text-basic leading-6 pb-10 border-b border-slate-300 border-solid">
+            <li class="flex flex-col gap-2 lg:gap-8 ">
+                <p class="text-tit text-lg font-medium w-full text-center lg:text-left">카지노</p>
+                <div class="flex flex-wrap flex-row lg:flex-col justify-center lg:justify-start gap-2">
+                    <a href="javascript:;">카지노 홈</a>
+                    <a href="javascript:;">슬롯</a>
+                    <a href="javascript:;">라이브카지노</a>
+                    <a href="javascript:;">New 출시</a>
+                    <a href="javascript:;">추천</a>
+                    <a href="javascript:;">테이블 게임</a>
+                    <a href="javascript:;">BlackJack</a>
+                    <a href="javascript:;">Roulette</a>
+                    <a href="javascript:;">Baccarat</a>
+                </div>
+            </li>
+            <li class="flex flex-col gap-2 lg:gap-8">
+                <p class="text-tit text-lg font-medium w-full text-center lg:text-left">스포츠</p>
+                <div class="flex flex-wrap flex-row lg:flex-col justify-center lg:justify-start gap-2">
+                    <a href="javascript:;">스포츠 홈</a>
+                    <a href="javascript:;">라이브</a>
+                    <a href="javascript:;">룰</a>
+                </div>
+            </li>
+            <li class="flex flex-col gap-2 lg:gap-8">
+                <p class="text-tit text-lg font-medium w-full text-center lg:text-left">프로모션</p>
+                <div class="flex flex-wrap flex-row lg:flex-col justify-center lg:justify-start gap-2">
+                    <a href="javascript:;">VIP 클럽</a>
+                    <a href="javascript:;">제휴</a>
+                    <a href="javascript:;">프로모션</a>
+                    <a href="javascript:;">복권</a>
+                    <a href="javascript:;">친구추천하기</a>
+                </div>
+            </li>
+            <li class="flex flex-col gap-2 lg:gap-8">
+                <p class="text-tit text-lg font-medium w-full text-center lg:text-left">서포트/법</p>
+                <div class="flex flex-wrap flex-row lg:flex-col justify-center lg:justify-start gap-2">
+                    <a href="javascript:;">고객센터</a>
+                    <a href="javascript:;">도박인식</a>
+                    <a href="javascript:;">공정성</a>
+                    <a href="javascript:;">FAQ</a>
+                    <a href="javascript:;">개인정보정책</a>
+                    <a href="javascript:;">서비스약관</a>
+                    <a href="javascript:;">계정삭제</a>
+                    <a href="javascript:;">자금세탁방지</a>
+                    <a href="javascript:;">디자인 자료</a>
+                    <a href="javascript:;">APP</a>
+                    <a href="javascript:;">라이브카지노</a>
+                </div>
+            </li>
+            <li class="flex flex-col gap-2 lg:gap-8">
+                <p class="text-tit text-lg font-medium w-full text-center lg:text-left">회사소개</p>
+                <div class="flex flex-wrap flex-row lg:flex-col justify-center lg:justify-start gap-2">
+                    <a href="javascript:;">뉴스</a>
+                    <a href="javascript:;">가입하기</a>
+                    <a href="javascript:;">비지니스 연락처</a>
+                    <a href="javascript:;">도움센터</a>
+                    <a href="javascript:;">대표 확인</a>
+                    <a href="javascript:;">
+                        Hashbet 
+                        <svg class="inline-flex w-3 h-3 fill-basic" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024"><path d="M365.386 83.556c31.44 0 56.926 25.486 56.926 56.926 0 30.897-24.617 56.046-55.307 56.904l-1.62 0.022h-170.777v629.186h629.186v-170.777c0-30.897 24.617-56.046 55.307-56.904l1.62-0.022c30.897 0 56.045 24.617 56.904 55.307l0.022 1.62v179.768c0 57.258-45.887 103.796-102.894 104.848l-1.968 0.017h-647.16c-57.258 0-103.796-45.887-104.848-102.894l-0.017-1.968v-647.16c0-57.258 45.887-103.796 102.894-104.848l1.968-0.017h179.768zM611.108 84.556l1.62 0.013 227.481 4.701c57.907 1.009 104.028 48.774 103.019 106.677l-1.176 62.495-1.198 54.931-1.442 62.539-0.437 21.864c-0.034 1.776-0.066 3.547-0.094 5.315-0.549 31.434-26.475 56.472-57.909 55.926s-56.472-26.475-55.926-57.909l0.308-16.334 2.11-93 0.246-11.744-360.933 330.867c-23.176 21.246-59.187 19.678-80.428-3.495-20.849-22.748-19.728-57.854 2.233-79.234l1.267-1.193 355.396-325.787-134.861-2.783c-30.889-0.638-55.524-25.77-55.748-56.469l0.013-1.62c0.638-30.889 25.77-55.524 56.469-55.748z"></path></svg>
+                    </a>
+                </div>
+            </li>
+            <li class="flex flex-col gap-2 lg:gap-8">
+                <p class="text-tit text-lg font-medium w-full text-center lg:text-left">커뮤니티 가입하기</p>
+                <div class="flex flex-wrap gap-3 w-full lg:w-36 justify-center lg:justify-start">
+                    <a class="telegram" href="javascript:;" target="_blank">
+                        <img class="w-10" src="./dist/custom_img/sns/share_7.webp" alt="telegram">
+                    </a>
+                    <a class="github" href="javascript:;" target="_blank">
+                        <img class="w-10" src="./dist/custom_img/sns/share_5.webp" alt="github">
+                    </a>
+                    <a class="twitter" href="javascript:;" target="_blank">
+                        <img class="w-10" src="./dist/custom_img/sns/share_8.webp" alt="twitter">
+                    </a>
+                    <a class="facebook" href="javascript:;" target="_blank">
+                        <img class="w-10" src="./dist/custom_img/sns/share_3.webp" alt="facebook">
+                    </a>
+                    <a class="discord" href="javascript:;" target="_blank">
+                        <img class="w-10" src="./dist/custom_img/sns/share_2.webp" alt="discord">
+                    </a>
+                    <a class="bitcoin" href="javascript:;" target="_blank">
+                        <img class="w-10" src="./dist/custom_img/sns/share_1.webp" alt="bitcoin">
+                    </a>
+                    <a class="instagram" href="javascript:;" target="_blank">
+                        <img class="w-10" src="./dist/custom_img/sns/share_6.webp" alt="instagram">
+                    </a>
+                </div>
+            </li>
+        </ul>
+        <div class="py-10 border-b border-slate-300 border-solid">
+            <p class="text-tit text-lg font-medium w-full text-center lg:text-left">허용되는 네트워크</p>
+            <ul></ul>
+        </div>
     </div>
 </footer>
