--- a/_left_menu.html
+++ b/_left_menu.html
@@ -1,4 +1,5 @@
 <!-- pc : 사이드메뉴 -->
+<div class="side-nav-bg"></div>
 <nav class="side-nav h-full">
         
     <div class="top_box intro-x flex items-center gap-4 p-2 px-3">
@@ -35,6 +36,7 @@
                     </a>
                 </div>
             </div>
+            <div></div>
         </div>
 
         <div class="fold_line mt-4"></div>
