푸터 진행중

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             <!-- ** 내용시작 ** -->
             <div class="container_wrap" style="height:1000px;">
                 <svg class="s1ff97qc icon"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Chat"></use></svg>
+                <div class="text-center"> <a href="javascript:;" class="tooltip btn btn-primary" title="This is awesome tooltip example!">Show Tooltip</a> </div> 
+
+                 <!-- BEGIN: Custom Tooltip Toggle --> 
+                
                 <!-- ** 푸터 시작 ** -->
                 <!-- ** 푸터 끝 ** -->
             </div>
@@ -71,9 +75,11 @@
     </div>
     <!-- ** JS 시작 ** -->
     <script
-        src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script src="./dist/js/app.js"></script>
+    src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
     <script src="./dist/custom_js/custom.js"></script>
+    <script src="./dist/js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <!-- ** 테이블 - slickGrid 시작 ** -->
     <!-- 필수 jquery library -->
