--- a/_footer.html
+++ b/_footer.html
@@ -92,21 +92,258 @@
         </ul>
         <div class="py-10 border-b border-slate-300 border-solid">
             <p class="text-tit text-lg font-medium w-full text-center lg:text-left">허용되는 네트워크</p>
-            <ul class="network_list flex">
+            <ul class="network_list mt-4 lg:mt-2">
                 <li>
-                    <a href="javascript:;" class="icon_btn icon-bitcoin"></a> 
+                    <a href="javascript:;" class="icon_btn icon-Bitcoin"></a> 
                     <div class="bg-back p-2 rounded ">
                         <div class="flex items-center justify-center gap-2 py-6">
-                            <a href="javascript:;" class="icon_btn icon-bitcoin"></a> 
+                            <a href="javascript:;" class="icon_btn icon-Bitcoin"></a> 
                             <p class="text-base">
                                 <b class="block text-tit">Bitcoin</b>
                                 BTC
                             </p>
                         </div>
-                        <button class="btn btn-green h-10 sm:h-14 w-24 sm:w-32 font-semibold">입금</button>
-                        <button class="btn btn-purple h-10 sm:h-14 w-16 sm:w-32 font-semibold">가상화폐 구매하기</button>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
                     </div>
-                    
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Ethereum"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Ethereum"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Ethereum</b>
+                                ETH
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Doge"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Doge"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Doge</b>
+                                DOGE
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Ripple"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Ripple"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Ripple</b>
+                                XRP
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Cardano"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Cardano"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Cardano</b>
+                                ADA
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Polkadot"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Polkadot"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Polkadot</b>
+                                DOT
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Tron"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Tron"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Tron</b>
+                                TRX
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-BSC"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-BSC"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">BSC</b>
+                                BNB
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Avalanche"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Avalanche"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Avalanche</b>
+                                AVAX
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Solana"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Solana"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Solana</b>
+                                SOL
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Polygon"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Polygon"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Polygon</b>
+                                MATIC
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Arbitrum"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Arbitrum"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Arbitrum</b>
+                                ETH
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Optimism"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Optimism"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Optimism</b>
+                                ETH
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Cronos"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Cronos"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Cronos</b>
+                                CRO
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Fantom"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Fantom"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Fantom</b>
+                                FTM
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Thorchain"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Thorchain"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Thorchain</b>
+                                RUNE
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Cosmos"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Cosmos"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Cosmos</b>
+                                ATOM
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
+                </li>
+                <li>
+                    <a href="javascript:;" class="icon_btn icon-Near"></a> 
+                    <div class="bg-back p-2 rounded ">
+                        <div class="flex items-center justify-center gap-2 py-6">
+                            <a href="javascript:;" class="icon_btn icon-Near"></a> 
+                            <p class="text-base">
+                                <b class="block text-tit">Near</b>
+                                Near
+                            </p>
+                        </div>
+                        <button class="btn btn-green h-10 sm:h-14 w-32 font-semibold">입금</button>
+                        <button class="btn btn-purple h-10 sm:h-14 w-32 font-semibold">가상화폐 구매하기</button>
+                    </div>
                 </li>
             </ul>
         </div>
