--- a/_top_bar.html
+++ b/_top_bar.html
@@ -4,7 +4,7 @@
         <div class="mo_left">
             <a class="block px-4 py-2" href="javascript:;"><img class="w-6" src="./dist//custom_img/logo_small.webp" alt=""></a>
         </div>
-        <div class="left">
+        <div class="left flex">
             <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic casino_i"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Casino"></use></svg> 카지노</button>
             <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic sports_i"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Sports"></use></svg> 스포츠</button>
             <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic horse_i"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Horse"></use></svg> 레이싱</button>
@@ -185,10 +185,10 @@
                 <svg class="sm:block hidden w-4 h-4 fill-white mr-2"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Wallet"></use></svg>
                 입금
             </button>
-            <button class="btn btn-top h-11 px-4 relative notice_btn"><svg class="w-5 h-5 fill-basic"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Notice"></use></svg><span class="z-10 absolute -right-1 -top-1 px-2.5 bg-primary text-white rounded-xl">1</span></button>
+            <button class="btn btn-top h-11 px-4 relative notice_btn" onclick="rightOpen('notice_area')"><svg class="w-5 h-5 fill-basic"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Notice"></use></svg><span class="z-10 absolute -right-1 -top-1 px-2.5 bg-primary text-white rounded-xl">1</span></button>
 
             <!-- 로그인했을때/안했을때 -->
-            <button class="btn btn-top h-11 px-4 chat_btn"><svg class="w-5 h-5 fill-basic"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Chat"></use></svg><div class="chat-dot"></div></button>
+            <button class="btn btn-top h-11 px-4 chat_btn" onclick="rightOpen('chat_area')"><svg class="w-5 h-5 fill-basic"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Chat"></use></svg><div class="chat-dot"></div></button>
 
             <!-- 모바일에서만 -->
             <button class="btn btn-top h-11 px-4 block sm:hidden"><svg class="w-5 h-5 fill-basic"><use xlink:href="./dist/custom_img/symbol-defs.svg#icon_Gift"></use></svg></button>
